--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2005-02-06  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Fixed a couple of issues in Danish translation.
+
 2005-02-06  Pauli Virtanen <pauli.virtanen@hut.fi>
 
-	 * fi.po: Updated Finnish translation.
+	* fi.po: Updated Finnish translation.
 
 2005-02-05  Žygimantas Beručka  <uid0@akl.lt>
 
