--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-07  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2005-02-07  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British translation.
