--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* nb.po:
+	* no.po:
+
 2005-02-08  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
