Updated Spanish translation.
2005-02-09  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-04 22:03+0100\n"
-"PO-Revision-Date: 2005-02-04 22:03+0100\n"
+"POT-Creation-Date: 2005-02-09 13:46+0100\n"
+"PO-Revision-Date: 2005-02-09 13:48+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -240,7 +240,7 @@ msgstr "_Examinar con cursor"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Find: "
-msgstr "_Buscar:"
+msgstr "_Buscar: "
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Fixed width:"
@@ -687,10 +687,7 @@ msgstr "Cargando..."
 #. * will show up in the "about" box
 #: ../src/yelp-window.c:2166
 msgid "translator-credits"
-msgstr ""
-"Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
-"Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
-"Germán Poo Caamaño <gpoo@ubiobio.cl>"
+msgstr "Francisco J.F. Serrador <serrador@cvs.gnome.com>"
 
 #: ../src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
