--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-11  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* uk.po: Update Ukrainian translation
+
 2005-02-09  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
