Updated French translation, from Baptiste Mille-Mathias <bmm80@free.fr>.
2005-02-13  Sebastien Bacher  <seb128@debian.org>

        * fr.po: Updated French translation,
        from Baptiste Mille-Mathias <bmm80@free.fr>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-13  Sebastien Bacher  <seb128@debian.org>
+
+	* fr.po: Updated French translation, 
+	from Baptiste Mille-Mathias <bmm80@free.fr>.
+
 2005-02-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
