--- a/po/fr.po
+++ b/po/fr.po
@@ -1,21 +1,21 @@
 # French translation of Yelp.
-# Copyright (C) 2002-2004 Free Software Foundation, Inc.
+# Copyright (C) 2002-2005 Free Software Foundation, Inc.
 # This file is under the same license as the yelp package.
-#
 # maintainer: Jean-Michel Ardantz <jmardantz@ifrance.com>, 2002-2004.
-# Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002-2004.
+# Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2002-2005.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2002.
 # Sun G11n <gnome_int_l10n@ireland.sun.com>, 2002.
 # Sébastien Bacher <seb128@debian.org>, 2004.
-#
+# 
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.6.0\n"
+"Project-Id-Version: yelp 2.10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-01-13 18:12-0600\n"
-"PO-Revision-Date: 2004-04-25 11:09+0200\n"
-"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
-"Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
+"POT-Creation-Date: 2005-01-24 22:06+0100\n"
+"PO-Revision-Date: 2005-01-21 23:32+0100\n"
+"Last-Translator: Baptiste Mille-Mathias <bmm80@free.fr>\n"
+"Language-Team: French <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -34,7 +34,7 @@ msgstr "Développement"
 
 #: data/man.xml.in.h:4
 msgid "FORTRAN Functions"
-msgstr ""
+msgstr "Fonctions FORTRAN"
 
 #: data/man.xml.in.h:5 data/toc.xml.in.h:7
 msgid "Games"
@@ -54,36 +54,31 @@ msgstr "Fonctions de bibliothèques"
 
 #: data/man.xml.in.h:9 src/yelp-toc-pager.c:785
 msgid "Man Pages"
-msgstr ""
+msgstr "Pages de manuel"
 
 #: data/man.xml.in.h:10
-#, fuzzy
 msgid "OpenSSL Applications"
-msgstr "Applications X"
+msgstr "Applications OpenSSL"
 
 #: data/man.xml.in.h:11
-#, fuzzy
 msgid "OpenSSL Configuration"
-msgstr "Fichiers de configuration"
+msgstr "Configuration OpenSSL"
 
 #: data/man.xml.in.h:12
-#, fuzzy
 msgid "OpenSSL Overviews"
-msgstr "Divers"
+msgstr "Divers OpenSSL"
 
 #: data/man.xml.in.h:13
 msgid "Overviews"
 msgstr "Divers"
 
 #: data/man.xml.in.h:14
-#, fuzzy
 msgid "Perl Functions"
-msgstr "Fonctions de bibliothèques"
+msgstr "Fonctions Perl"
 
 #: data/man.xml.in.h:15
-#, fuzzy
 msgid "Qt Functions"
-msgstr "Fonctions de bibliothèques"
+msgstr "Fonctions QT"
 
 #: data/man.xml.in.h:16
 msgid "System Administration"
@@ -94,46 +89,40 @@ msgid "System Calls"
 msgstr "Appels système"
 
 #: data/man.xml.in.h:18
-#, fuzzy
 msgid "Termcap Applications"
-msgstr "Applications X"
+msgstr "Applications Termcap"
 
 #: data/man.xml.in.h:19
-#, fuzzy
 msgid "X11 Applications"
-msgstr "Applications X"
+msgstr "Applications X11"
 
 #: data/man.xml.in.h:20
-#, fuzzy
 msgid "X11 Configuration"
-msgstr "Fichiers de configuration"
+msgstr "Configuration X11"
 
 #: data/man.xml.in.h:21
 msgid "X11 Devices"
-msgstr ""
+msgstr "Périphériques X11"
 
 #: data/man.xml.in.h:22
-#, fuzzy
 msgid "X11 Functions"
-msgstr "Fonctions de bibliothèques"
+msgstr "Fonctions X11"
 
 #: data/man.xml.in.h:23
-#, fuzzy
 msgid "X11 Games"
-msgstr "Jeux"
+msgstr "Jeux X11"
 
 #: data/man.xml.in.h:24
-#, fuzzy
 msgid "X11 Overviews"
-msgstr "Divers"
+msgstr "Divers X11"
 
 #: data/toc.xml.in.h:1
 msgid "Accessibility"
-msgstr ""
+msgstr "Accessibilité"
 
 #: data/toc.xml.in.h:2
 msgid "Accessories"
-msgstr ""
+msgstr "Accessoires"
 
 #: data/toc.xml.in.h:3
 msgid "Applets"
@@ -149,52 +138,47 @@ msgstr "Applications éducatives"
 
 #: data/toc.xml.in.h:8
 msgid "Graphics"
-msgstr ""
+msgstr "Graphisme"
 
-#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:326
-#, fuzzy
+#: data/toc.xml.in.h:9 src/yelp-bookmarks.c:386
 msgid "Help Topics"
-msgstr "Navigateur d'aide"
+msgstr "Sommaire de l'aide"
 
 #: data/toc.xml.in.h:10
-#, fuzzy
 msgid "Internet"
-msgstr "Sommaire"
+msgstr "Internet"
 
 #: data/toc.xml.in.h:11
 msgid "KDE"
 msgstr "KDE"
 
 #: data/toc.xml.in.h:12
-msgid "Office"
-msgstr ""
+msgid "Multimedia"
+msgstr "Multimedia"
 
 #: data/toc.xml.in.h:13
-msgid "Other"
-msgstr ""
+msgid "Office"
+msgstr "Bureautique"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
-msgid "Other Documentation"
-msgstr "Information sur la version"
+msgid "Other"
+msgstr "Autre"
 
 #: data/toc.xml.in.h:15
-msgid "Programming"
-msgstr ""
+msgid "Other Documentation"
+msgstr "Autre documentation"
 
 #: data/toc.xml.in.h:16
-#, fuzzy
+msgid "Programming"
+msgstr "Programmation"
+
+#: data/toc.xml.in.h:17
 msgid "Scientific"
 msgstr "Applications scientifiques"
 
-#: data/toc.xml.in.h:17
-msgid "Sound &amp; Video"
-msgstr ""
-
 #: data/toc.xml.in.h:18
-#, fuzzy
 msgid "System Tools"
-msgstr "Appels système"
+msgstr "Outils système"
 
 #: data/toc.xml.in.h:19
 msgid "X Applications"
@@ -202,29 +186,27 @@ msgstr "Applications X"
 
 #: data/ui/yelp.glade.h:1
 msgid "<b>Accessibility</b>"
-msgstr ""
+msgstr "<b>Accessibilité</b>"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
-msgstr ""
+msgstr "<b>Polices</b>"
 
 #: data/ui/yelp.glade.h:3
-#, fuzzy
 msgid "<b>_Bookmarks:</b>"
-msgstr "Livre"
+msgstr "<b>_Signets :</b>"
 
 #: data/ui/yelp.glade.h:4
 msgid "<b>_Title:</b>"
-msgstr ""
+msgstr "<b>_Titre :</b>"
 
 #: data/ui/yelp.glade.h:5
 msgid "Add Bookmark"
-msgstr ""
+msgstr "Ajouter un signet"
 
 #: data/ui/yelp.glade.h:6
-#, fuzzy
 msgid "Bookmarks"
-msgstr "Livre"
+msgstr "Signets"
 
 #: data/ui/yelp.glade.h:7
 msgid "C_ase sensitive"
@@ -235,22 +217,20 @@ msgid "Find"
 msgstr "Rechercher"
 
 #: data/ui/yelp.glade.h:9
-#, fuzzy
 msgid "Open Location"
-msgstr "Dedicace"
+msgstr "Ouvrir l'emplacement"
 
 #: data/ui/yelp.glade.h:10
-#, fuzzy
 msgid "Preferences"
-msgstr "Référence"
+msgstr "Préférences"
 
 #: data/ui/yelp.glade.h:11
 msgid "Re_name"
-msgstr ""
+msgstr "Re_nommer"
 
 #: data/ui/yelp.glade.h:12
 msgid "_Browse with caret"
-msgstr ""
+msgstr "_Naviguer avec les carets"
 
 #: data/ui/yelp.glade.h:13
 msgid "_Find: "
@@ -258,12 +238,11 @@ msgstr "_Rechercher : "
 
 #: data/ui/yelp.glade.h:14
 msgid "_Fixed width:"
-msgstr ""
+msgstr "Chasse _fixe :"
 
 #: data/ui/yelp.glade.h:15
-#, fuzzy
 msgid "_Location:"
-msgstr "Dedicace"
+msgstr "Emplacement :"
 
 #: data/ui/yelp.glade.h:16
 msgid "_Next"
@@ -275,11 +254,11 @@ msgstr "_Précédent"
 
 #: data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr ""
+msgstr "_Utiliser les polices système"
 
 #: data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr ""
+msgstr "Chasse _variable :"
 
 #: data/ui/yelp.glade.h:20
 msgid "_Wrap around"
@@ -287,35 +266,37 @@ msgstr "Recherche _circulaire"
 
 #: data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr ""
+msgstr "Police à chasse fixe"
 
 #: data/yelp.schemas.in.h:2
 msgid "Font for text"
-msgstr ""
+msgstr "Police du texte"
 
 #: data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr ""
+msgstr "Police de texte à chasse fixe."
 
 #: data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr ""
+msgstr "Police pour le texte à chasse variable."
 
 #: data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
 msgstr ""
+"Utiliser un caret controllable par le clavier lorsque de la visualisation "
+"des pages."
 
 #: data/yelp.schemas.in.h:6
 msgid "Use caret"
-msgstr ""
+msgstr "Utiliser avec le caret"
 
 #: data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr ""
+msgstr "Utiliser les polices systèmes"
 
 #: data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr ""
+msgstr "Utiliser les polices définies pour le système."
 
 #: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2169
 msgid "Yelp"
@@ -325,60 +306,71 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fabrique Yelp"
 
-#: src/yelp-bookmarks.c:241 src/yelp-bookmarks.c:313
+#: src/yelp-bookmarks.c:150
+msgid "Open Bookmark in New Window"
+msgstr "Ouvrir le signet dans une nouvelle fenêtre"
+
+#: src/yelp-bookmarks.c:154
+msgid "Rename Bookmark"
+msgstr "Renommer le signet"
+
+#: src/yelp-bookmarks.c:158
+msgid "Remove Bookmark"
+msgstr "Supprimer le signet"
+
+#: src/yelp-bookmarks.c:301 src/yelp-bookmarks.c:373
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr ""
+msgstr "Un signet intitulé <b>%s</b> existe déjà pour cette page."
 
-#: src/yelp-bookmarks.c:341
-#, fuzzy
+#: src/yelp-bookmarks.c:401
 msgid "Document Sections"
-msgstr "Information sur la version"
+msgstr "Sections du document"
 
-#: src/yelp-db-pager.c:238
+#: src/yelp-db-pager.c:242
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
+"Le fichier « %s » ne peut être analysé. Soit il n'existe pas, soit ce n'est "
+"pas un fichier XML bien formé."
 
-#: src/yelp-db-pager.c:486
-msgid "Unknown"
-msgstr "Inconnu"
+#: src/yelp-db-pager.c:489
+msgid "Unknown Section"
+msgstr "Section inconnue"
 
 #: src/yelp-error.c:42 src/yelp-error.c:58
 msgid "An unknown error occured"
-msgstr ""
+msgstr "Une erreur inconnue est apparue"
 
 #: src/yelp-error.c:46
 msgid "Could not load document"
-msgstr ""
+msgstr "Impossible de charger le document"
 
 #: src/yelp-error.c:48
-#, fuzzy
 msgid "Could not load section"
-msgstr "Impossible d'ouvrir une nouvelle fenêtre."
+msgstr "Impossible de charger la section"
 
 #: src/yelp-error.c:50
-#, fuzzy
 msgid "Could not read the table of contents"
-msgstr "Impossible de charger le fichier OMF « %s »"
+msgstr "Impossible de lire la table des matières"
 
 #: src/yelp-error.c:52
 msgid "Unsupported Format"
-msgstr ""
+msgstr "Format non supporté"
 
 #: src/yelp-error.c:54
 msgid "Could not read document"
-msgstr ""
+msgstr "Impossible de lire le document"
 
 #: src/yelp-error.c:56
 msgid "Could not process document"
-msgstr ""
+msgstr "Impossible de traiter le document"
 
 #: src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr ""
+msgstr "Aucune information n'est disponible à propos de cette erreur."
 
 #: src/yelp-io-channel.c:98
 #, c-format
@@ -386,6 +378,8 @@ msgid ""
 "The file ‘%s’ could not be read and decoded. The file may be compressed in "
 "an unsupported format."
 msgstr ""
+"Le fichier « %s » ne peut être lu et décodé. Le fichier peut être compressé "
+"dans format non supporté."
 
 #: src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -410,15 +404,16 @@ msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
 msgstr ""
+"Le fichier « % » ne peut être analysé. Soit le fichier n'existe pas, ou il "
+"est incorrectement formatté."
 
 #: src/yelp-pager.c:120
-#, fuzzy
 msgid "Document Information"
-msgstr "Information sur la version"
+msgstr "Information sur le document"
 
 #: src/yelp-pager.c:121
 msgid "The YelpDocInfo struct of the document"
-msgstr ""
+msgstr "La structure YelpDocInfo du document"
 
 #. TRANSLATORS:
 #. This is an image of the opening quote character used to watermark
@@ -443,7 +438,7 @@ msgstr ""
 #.
 #: src/yelp-settings.c:151
 msgid "yelp-watermark-blockquote-201C"
-msgstr ""
+msgstr "yelp-watermark-blockquote-00AB"
 
 #: src/yelp-toc-pager.c:268
 msgid "YelpTocPager: Pause count is negative."
@@ -457,7 +452,7 @@ msgstr "Impossible de charger le fichier OMF « %s »"
 #: src/yelp-toc-pager.c:680
 #, c-format
 msgid "Read man page for %s"
-msgstr ""
+msgstr "Lire la page man pour %s"
 
 #: src/yelp-toc-pager.c:765
 #, c-format
@@ -465,6 +460,8 @@ msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
 msgstr ""
+"La table des matières ne peut être chargée. Le fichier « %s » est soit "
+"manquant ou mal-formé."
 
 #: src/yelp-toc-pager.c:873
 #, c-format
@@ -472,6 +469,8 @@ msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
 msgstr ""
+"La table des matières ne peut être traitée. Le fichier « %s » est soit "
+"manquant ou n'est pas une feuille de style XSLT."
 
 #: src/yelp-toc-pager.c:1024 src/yelp-xslt-pager.c:365
 msgid "No href attribute found on yelp:document"
@@ -486,84 +485,72 @@ msgid "Help Contents"
 msgstr "Contenu de l'aide"
 
 #: src/yelp-window.c:302
-#, fuzzy
 msgid "_File"
-msgstr "/_Fichier"
+msgstr "_Fichier"
 
 #: src/yelp-window.c:303
-#, fuzzy
 msgid "_Edit"
-msgstr "/_Édition"
+msgstr "_Édition"
 
 #: src/yelp-window.c:304
-#, fuzzy
 msgid "_Go"
-msgstr "/A_ller"
+msgstr "A_ller"
 
 #: src/yelp-window.c:305
 msgid "_Bookmarks"
-msgstr ""
+msgstr "_Signets"
 
 #: src/yelp-window.c:306
-#, fuzzy
 msgid "_Help"
-msgstr "/_Aide"
+msgstr "_Aide"
 
 #: src/yelp-window.c:309
-#, fuzzy
 msgid "_New Window"
-msgstr "/Fichier/_Nouvelle fenêtre"
+msgstr "_Nouvelle fenêtre"
 
 #: src/yelp-window.c:314
-#, fuzzy
 msgid "About This Document"
-msgstr "À propos de cet ensemble"
+msgstr "À propos de ce document"
 
 #: src/yelp-window.c:319
 msgid "Open _Location"
-msgstr ""
+msgstr "Ouvrir l'emp_lacement"
 
 #: src/yelp-window.c:324
-#, fuzzy
 msgid "_Close Window"
-msgstr "/Fichier/_Fermer la fenêtre"
+msgstr "_Fermer la fenêtre"
 
 #: src/yelp-window.c:330
 msgid "_Copy"
-msgstr ""
+msgstr "_Copier"
 
 #: src/yelp-window.c:336
-#, fuzzy
 msgid "_Select All"
-msgstr "Voir aussi"
+msgstr "Tout _sélectionner"
 
 #: src/yelp-window.c:341
-#, fuzzy
 msgid "_Find..."
-msgstr "/Édition/_Rechercher..."
+msgstr "_Rechercher..."
 
 #: src/yelp-window.c:346
-#, fuzzy
 msgid "_Preferences"
-msgstr "Référence"
+msgstr "_Préférences"
 
 #: src/yelp-window.c:351
 msgid "_Reload"
-msgstr ""
+msgstr "_Recharger"
 
 #: src/yelp-window.c:357
-#, fuzzy
 msgid "_Back"
-msgstr "Précédent"
+msgstr "_Précédent"
 
 #: src/yelp-window.c:359
 msgid "Show previous page in history"
 msgstr "Affiche la page précédente de l'historique"
 
 #: src/yelp-window.c:362
-#, fuzzy
 msgid "_Forward"
-msgstr "Suivant"
+msgstr "_Suivant"
 
 #: src/yelp-window.c:364
 msgid "Show next page in history"
@@ -571,51 +558,47 @@ msgstr "Affiche la page suivante de l'historique"
 
 #: src/yelp-window.c:367
 msgid "_Help Topics"
-msgstr ""
+msgstr "Sommaire de l'_aide"
 
 #: src/yelp-window.c:369
 msgid "Go to the listing of help topics"
-msgstr ""
+msgstr "Aller à la liste du sommaire de l'aide."
 
 #: src/yelp-window.c:372
-#, fuzzy
 msgid "_Previous Section"
-msgstr "/Aller/Page _précédente"
+msgstr "Section _précédente"
 
 #: src/yelp-window.c:377
-#, fuzzy
 msgid "_Next Section"
-msgstr "Section"
+msgstr "Section suiva_nte"
 
 #: src/yelp-window.c:382
-#, fuzzy
 msgid "_Contents"
-msgstr "Sommaire"
+msgstr "_Sommaire"
 
 #: src/yelp-window.c:388
 msgid "_Add Bookmark"
-msgstr ""
+msgstr "_Ajouter un signet"
 
 #: src/yelp-window.c:393
 msgid "_Edit Bookmarks..."
-msgstr ""
+msgstr "_Éditer les signets..."
 
 #: src/yelp-window.c:399
 msgid "_Open Link"
-msgstr ""
+msgstr "_Ouvrir le lien"
 
 #: src/yelp-window.c:404
 msgid "Open Link in _New Window"
-msgstr ""
+msgstr "Ouvrir le lien dans une _nouvelle fenêtre"
 
 #: src/yelp-window.c:409
 msgid "_Copy Link Address"
-msgstr ""
+msgstr "_Copier l'adresse du lien"
 
 #: src/yelp-window.c:415
-#, fuzzy
 msgid "_About"
-msgstr "/Aide/À _propos"
+msgstr "_À propos"
 
 #: src/yelp-window.c:466
 msgid "Help Browser"
@@ -623,7 +606,7 @@ msgstr "Navigateur d'aide"
 
 #: src/yelp-window.c:697 src/yelp-window.c:830
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr ""
+msgstr "L'identifieur uniforme de ressource « %s » est invalide."
 
 #: src/yelp-window.c:709 src/yelp-window.c:825
 #, c-format
@@ -631,35 +614,36 @@ msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
 msgstr ""
+"L'identifieur uniforme de ressource « %s » est invalide ou ne pointe pas sur "
+"le fichier actuel."
 
 #: src/yelp-window.c:786 src/yelp-window.c:1140
 msgid "Man pages are not supported in this version."
-msgstr ""
+msgstr "Les pages de manuel ne sont pas supportées dans cette version."
 
 #: src/yelp-window.c:796 src/yelp-window.c:1131
 msgid "GNU info pages are not supported in this version"
-msgstr ""
+msgstr "Les pages GNU info ne sont pas supportées dans cette version"
 
 #: src/yelp-window.c:806
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
 msgstr ""
+"Les documents SGML ne sont plus supportés.  Veuillez demander à l'auteur du "
+"document de le convertir en XML."
 
 #: src/yelp-window.c:1024
-#, fuzzy
 msgid "Find:"
-msgstr "Rechercher"
+msgstr "Rechercher :"
 
 #: src/yelp-window.c:1040
-#, fuzzy
 msgid "Find _Next"
-msgstr "/Édition/Rechercher le _suivant"
+msgstr "Rechercher le suiva_nt"
 
 #: src/yelp-window.c:1052
-#, fuzzy
 msgid "Find _Previous"
-msgstr "_Précédent"
+msgstr "Rechercher _précédent"
 
 #: src/yelp-window.c:1157
 #, c-format
@@ -667,6 +651,8 @@ msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
 msgstr ""
+"Un contexte de transformation ne peut être créé pour le fichier « s ». Le "
+"format n'est peut être pas supporté."
 
 #: src/yelp-window.c:1187 src/yelp-window.c:1601 src/yelp-window.c:1668
 #, c-format
@@ -675,6 +661,9 @@ msgid ""
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
 msgstr ""
+"La section « %s » n'existe pas dans ce document. Si vous avez été dirigé "
+"vers cette section par une bouton d'aide dans une application, veuillez "
+"reporter cela au mainteneur de cette application."
 
 #: src/yelp-window.c:1302
 #, c-format
@@ -682,6 +671,8 @@ msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
 msgstr ""
+"Le fichier « % » ne peut être lu. Ce fichier pourrait être manquant, ou vous "
+"n'avez peut être pas les permissions de le lire."
 
 #: src/yelp-window.c:1336
 msgid "Loading..."
@@ -690,7 +681,6 @@ msgstr "Chargement..."
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
 #: src/yelp-window.c:2166
-#, fuzzy
 msgid "translator-credits"
 msgstr ""
 "Mainteneur :\n"
@@ -704,7 +694,7 @@ msgstr ""
 
 #: src/yelp-window.c:2171
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr ""
+msgstr "Un navigateur et lecteur de documentation pour le bureau GNOME."
 
 #: src/yelp-xslt-pager.c:194
 #, c-format
@@ -712,24 +702,31 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
 msgstr ""
+"Le fichier « %s » ne peut être analysé. Soit il n'existe pas, soit il est "
+"mal formatté."
 
-#: src/yelp-xslt-pager.c:215
+#: src/yelp-xslt-pager.c:215 src/yelp-xslt-pager.c:228
 #, c-format
 msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
 msgstr ""
-
-#: src/yelp-xslt-pager.c:228
-#, c-format
-msgid ""
-"The document ‘%s’could not be processed. The file ‘%s’ is either missing or "
-"is not a valid XSLT stylesheet."
-msgstr ""
+"Le document « %s » ne peut être traité. Le fichier « %s » est soit manquant "
+"ou ce n'est pas une feuille de style XSLT valide."
 
 #: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr "Affiche l'aide sur GNOME"
+msgstr "Obtenir de l'aide sur GNOME"
+
+#~ msgid ""
+#~ "The document ‘%s’could not be processed. The file ‘%s’ is either missing "
+#~ "or is not a valid XSLT stylesheet."
+#~ msgstr ""
+#~ "Le document « %s » ne peut être traité. Le fichier « %s » est soit "
+#~ "manquant ou ce n'est pas une feuille de style XSLT valide."
+
+#~ msgid "Sound &amp; Video"
+#~ msgstr "Son et Vidéo"
 
 #, fuzzy
 #~ msgid "_Home"
@@ -762,9 +759,6 @@ msgstr "Affiche l'aide sur GNOME"
 
 #~ msgid "Kernels"
 #~ msgstr "Noyaux"
-
-#~ msgid "Multimedia Applications"
-#~ msgstr "Applications multimedia"
 
 #~ msgid "Office and Productivity Applications"
 #~ msgstr "Applications de bureautique"
